--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,105 @@
 /config/theme.yml
 
 node_modules/
+
+
+# Created by https://www.gitignore.io/api/codekit,espresso,sublimetext
+
+### prepros6 ###
+prepros-6.config
+
+
+## TODO ##
+.TODO
+.gitignore
+
+uikit.css.map
+uikit.css
+uikit.theme.css.map
+uikit.theme.css
+
+### CodeKit ###
+# General CodeKit files to ignore
+config.codekit
+
+### CodeKit Patch ###
+*/codekit-config.json
+.codekit-cache
+
+### Espresso ###
+*.esproj
+
+### SublimeText ###
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+# *.sublime-project
+
+# sftp configuration file
+sftp-config.json
+
+# Package control specific files
+Package Control.last-run
+Package Control.ca-list
+Package Control.ca-bundle
+Package Control.system-ca-bundle
+Package Control.cache/
+Package Control.ca-certs/
+Package Control.merged-ca-bundle
+Package Control.user-ca-bundle
+oscrypto-ca-bundle.crt
+bh_unicode_properties.cache
+
+# Sublime-github package stores a github token in this file
+# https://packagecontrol.io/packages/sublime-github
+GitHub.sublime-settings
+
+# End of https://www.gitignore.io/api/codekit,espresso,sublimetext
+
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+/uikit.theme.css
+/uikit.theme.css.map
